Move home page background from body. Separated out nav bar a bit. Need to fix nav bar so background shows behind instead of covering.

--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -53,27 +53,40 @@ input[type="submit"] {
 
 //This should be on the home page only
 body {
-  // background:
-  //   image-url("subtle-dots.png"),
-  //   image-url("handsup.jpeg");
-  background-image: image-url("subtle-dots.png"), image-url("handsup.jpeg");
-  background-repeat: repeat, no-repeat;
-  background-position: 0 0;
-  background-size: 45px 45px, cover;
+  background: #25364A;
+  // position: absolute;
+  // top: 0px;
+  // bottom: 0px;
+  // left: 0px;
+  // right: 0px;
+
+  // background-image: image-url("subtle-dots.png"), image-url("handsup.jpeg");
+  // background-repeat: repeat, no-repeat;
+  // background-position: 0 0;
+  // background-size: 45px 45px, cover;
 }
 
 //Nav bar
 
 
-.nav-bar {
+#nav-bar {
   font-family: sans-serif;
   text-align: left;
   color: white;
   font-weight: bold;
-  padding-bottom: 15px;
-
+  height: 70px;
+  width: 100%;
+  top: 0;
   // to make menu bar stay on top when you scroll down
-  // position: fixed
+  background-attachment: fixed;
+}
+
+.nav-bar-content {
+  width: 930px;
+  margin-top: 20px;
+  margin-left: auto;
+  margin-right: auto;
+  display: flex-inline;
 }
 
 // Eventually should be image, not text
@@ -95,25 +108,6 @@ body {
   font-size: 12px;
   font-weight: normal;
   padding: 13px;
-}
-
-.nav-bar {
-  width: 930px;
-  margin-top: 20px;
-  margin-left: auto;
-  margin-right: auto;
-  display: flex-inline;
-}
-
-.nav-bar-background {
-  width: 100%;
-  height: 70px;
-  background: #25364A;
-  position: absolute;
-  top: 0px;
-  bottom: 0px;
-  left: 0px;
-  right: 0px;
 }
 
 .inspiration {
@@ -234,7 +228,17 @@ body {
 
 //Home
 
-.home {
+.home-page {
+  background-image: image-url("subtle-dots.png"), image-url("handsup.jpeg");
+  background-repeat: repeat, no-repeat;
+  // background-position: 0, absolute;
+  background-size: 45px 45px, cover;
+
+  position:absolute;
+  top: 70px;
+  bottom: 0px;
+  left: 0px;
+  right: 0px;
 
 }
 
